Added some information

--- a/client/index.html
+++ b/client/index.html
@@ -143,10 +143,13 @@
 <!-- Angular JS -->
 <script src="bower_components/angular/angular.min.js"></script>
 <script src="bower_components/angular-new-router/dist/router.es5.min.js"></script>
+<script src="components/about/about.js"></script>
+<script src="components/contact/contact.js"></script>
+<script src="components/home/home.js"></script>
+<script src="components/projects/projects.js"></script>
 <script src="app.js"></script>
 
 <!-- Plugin JavaScript -->
-<script src="http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
 <script src="scripts/classie.js"></script>
 <script src="scripts/cbpAnimatedHeader.js"></script>
 
@@ -154,9 +157,8 @@
 <script src="scripts/jqBootstrapValidation.js"></script>
 
 <!-- Custom Theme JavaScript -->
-<script src="scripts/freelancer.js"></script>
-
-
+<!--<script src="http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>-->
+<!--<script src="scripts/freelancer.js"></script>-->
 
 </body>
 
