--- a/client/index.html
+++ b/client/index.html
@@ -191,7 +191,7 @@
 <script src="js/core.js"></script>
 
 <!-- Google Map API -->
-<!--<script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false"></script>-->
+<script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false"></script>
 
 <!-- Google Analytics -->
 <script>
