--- a/client/index.html
+++ b/client/index.html
@@ -68,8 +68,8 @@
 
     <!-- Logo -->
     <div class="logo bg-primary">
-        <h1 class="name">{{ 'HOME.NAME' | translate }}</h1>
-        <span class="caption text-secondary">{{ 'HOME.JOB_TITLE' | translate }}</span>
+        <h1 class="name">sebastianhof.com</h1>
+        <span class="caption text-secondary">Software engineering</span>
     </div>
 
     <!-- Navigation -->
@@ -78,7 +78,7 @@
             <li><a href="#/">{{ 'HOME' | translate }}</a></li>
             <li><a href="#/about">{{ 'ABOUT' | translate }}</a></li>
             <li><a href="#/projects">{{ 'PROJECTS' | translate }}</a></li>
-            <li><a href="#/contact">{{ 'CONTACT' | translate }}</a></a></li>
+            <li><a href="#/contact">{{ 'CONTACT' | translate }}</a></li>
             <li class="dropdown">
                 <a class="dropdown-toggle" data-toggle="dropdown">{{ app.currentLang }}</a>
                 <ul class="dropdown-menu">
@@ -92,15 +92,15 @@
 
     <!-- Social Media -->
     <div class="social-media pull-right">
-        <a href="https://linkedin.com/in/sebastianhof" class="icon icon-xs margin-l-20"><i
+        <a href="https://linkedin.com/in/sebastianhof" class="icon icon-xs margin-l-20" target="_blank"><i
                 class="fa fa-linkedin text-muted"></i></a>
-        <a href="https://www.xing.com/profile/Sebastian_Hof7" class="icon icon-xs margin-l-20"><i
+        <a href="https://www.xing.com/profile/Sebastian_Hof7" class="icon icon-xs margin-l-20" target="_blank"><i
                 class="fa fa-xing text-muted"></i></a>
-        <a href="https://github.com/sebastianhof" class="icon icon-xs margin-l-20"><i
+        <a href="https://github.com/sebastianhof" class="icon icon-xs margin-l-20" target="_blank"><i
                 class="fa fa-github text-muted"></i></a>
-        <a href="https://www.facebook.com/1656428665" class="icon icon-xs margin-l-20"><i
+        <a href="https://www.facebook.com/1656428665" class="icon icon-xs margin-l-20" target="_blank"><i
                 class="fa fa-facebook text-muted"></i></a>
-        <a href="https://twitter.com/snhof" class="icon icon-xs"><i class="fa fa-twitter text-muted"></i></a>
+        <a href="https://twitter.com/snhof" class="icon icon-xs" target="_blank"><i class="fa fa-twitter text-muted"></i></a>
     </div>
 
 </header>
@@ -189,9 +189,6 @@
 
 <!-- JS Core -->
 <script src="js/core.js"></script>
-
-<!-- Google Map API -->
-<script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false"></script>
 
 <!-- Google Analytics -->
 <script>
