Added some portfolio items

--- a/client/index.html
+++ b/client/index.html
@@ -143,7 +143,7 @@
             </ul>
         </div>
     </div>
-    <a href="#" class="mobile-nav-close icon icon-hover icon-xs icon-circle icon-primary" data-target="mobile-nav"><i
+    <a class="mobile-nav-close icon icon-hover icon-xs icon-circle icon-primary" data-target="mobile-nav"><i
             class="fa fa-times"></i></a>
 </nav>
 
