--- a/client/index.html
+++ b/client/index.html
@@ -206,8 +206,8 @@
 <script src="bower_components/scrollreveal/dist/scrollReveal.min.js"></script>
 <script>
     var config = {
-        reset:    true,
-    }
+        reset:    true
+    };
     window.sr = new scrollReveal(config);
 </script>
 
