--- a/client/index.html
+++ b/client/index.html
@@ -157,6 +157,7 @@
 <script src="bower_components/angular/angular.min.js"></script>
 <script src="bower_components/angular-sanitize/angular-sanitize.min.js"></script>
 <script src="bower_components/angular-translate/angular-translate.min.js"></script>
+<script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
 <script src="bower_components/angular-translate-loader-static-files/angular-translate-loader-static-files.min.js"></script>
 <script src="bower_components/angular-new-router/dist/router.es5.min.js"></script>
 <script src="components/about/about.js"></script>
