--- a/client/index.html
+++ b/client/index.html
@@ -5,7 +5,11 @@
     <!-- Meta -->
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"/>
-
+    <meta name="author" content="Sebastian Hof">
+    <meta name="description"
+          content="Professional homepage of Sebastian Hof, Software Engineer and Research Associate. I offer advanced software engineering consulting services.">
+    <meta name="keywords"
+          content="Sebastian Hof, Software Engineering, Consulting, Design, Development, Analytics, Web Development, App Development, Resume, CV">
     <!-- Title -->
     <title>sebastianhof.com</title>
 
