Added meta tags

--- a/client/index.html
+++ b/client/index.html
@@ -11,7 +11,7 @@
     <meta name="keywords"
           content="Sebastian Hof, Software Engineering, Consulting, Design, Development, Analytics, Web Development, App Development, Resume, CV">
     <!-- Title -->
-    <title>sebastianhof.com</title>
+    <title>sebastianhof.com: Professional homepage of Sebastian Hof</title>
 
     <!-- Favicons -->
     <link rel="shortcut icon" href="images/favicon.png">
