Changed software to web engineering

--- a/client/index.html
+++ b/client/index.html
@@ -7,9 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"/>
     <meta name="author" content="Sebastian Hof">
     <meta name="description"
-          content="Professional homepage of Sebastian Hof, Software Engineer and Research Associate. I offer advanced software engineering consulting services.">
+          content="Professional homepage of Sebastian Hof, Software Engineer and Research Associate. I offer advanced web development consulting services.">
     <meta name="keywords"
-          content="Sebastian Hof, Software Engineering, Consulting, Design, Development, Analytics, Web Development, App Development, Resume, CV">
+          content="Sebastian Hof, Web Engineering, Software Engineering, Consulting, Design, Development, Analytics, Web Development, App Development, Resume, CV">
     <!-- Title -->
     <title>sebastianhof.com: Professional homepage of Sebastian Hof</title>
 
@@ -60,7 +60,7 @@
     <!-- Logo -->
     <div class="logo bg-primary">
         <h1 class="name">sebastianhof.com</h1>
-        <span class="caption text-secondary">Software engineering</span>
+        <span class="caption text-secondary">Web engineering</span>
     </div>
 
     <!-- Navigation -->
