--- a/client/index.html
+++ b/client/index.html
@@ -180,6 +180,7 @@
 <script src="components/projects/projects.js"></script>
 <script src="components/imprint/imprint.js"></script>
 <script src="components/privacy/privacy.js"></script>
+<script src="components/secret/secret.js"></script>
 <script src="app.js"></script>
 
 <!-- JS Plugins -->
